# theta-plugin-opengl-sample

./: README.md  local.properties
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/theta360/pluginapplication/: EditViewActivity.java  MainActivity.java  Util.java
app/src/main/java/com/theta360/pluginapplication/app/: GLApplication.java  RenderingThread.java
app/src/main/java/com/theta360/pluginapplication/app/ndk/: NDKApplication.java
app/src/main/java/com/theta360/pluginapplication/data/: AndroidPlatformData.java  RawData.java  RawPixelImage.java
app/src/main/java/com/theta360/pluginapplication/egl/: EGLDevice.java  EGLManager.java
app/src/main/java/com/theta360/pluginapplication/util/: ES20.java
app/src/main/jni/: ES20_impl.c  ndk-app.c  signatures.h  support_ndk.c  support_ndk.h
app/src/main/jni/openGL/: open-gl.c  open-gl.h
app/src/main/jni/support/: support.h  support_RawData.h  support_gl_CompressedTexture.h  support_gl_Vector.c  support_gl_Vector.h
app/src/main/res/values/: strings.xml
gradle/wrapper/: gradle-wrapper.properties
pluginlibrary/: build.gradle
pluginlibrary/src/main/java/com/theta360/pluginlibrary/activity/: PluginActivity.java
